@@ -62,38 +62,6 @@ namespace Banter
 			return exists;
 		}
 		
-		/*
-		static public Conversation Create (Account account, Person peer, bool initiate)
-		{
-			Conversation conversation = null;
-			lock (lckr)
-			{
-				// Check if a conversation already exists
-				foreach (Conversation c in ConversationManager.conversations)
-				{
-					foreach (ProviderUser pu in peer.ProviderUsers) {
-						if (pu.Uri.CompareTo (c.PeerUser.Uri) == 0)
-						{
-							conversation = c;
-							break;
-						}
-					}
-				}
-
-				if (conversation == null)
-				{
-					// FIXEME::ProviderUsers will be indexed off the person
-					// object in priority
-					
-					Logger.Debug ("Conversation with {0} doesn't exist", peer.DisplayName);
-					conversation = new Conversation (account, peer, peer.ProviderUsers[0], initiate);
-					conversations.Add (conversation);
-				}
-			}
-			
-			return conversation;
-		}
-		*/
 		
 		static public Conversation Create (ProviderUser provideruser)
 		{
@@ -236,6 +204,15 @@ namespace Banter
 					if (peerUser == null) return;
 					
 					if (ConversationManager.Exist (peerUser) == true) {
+						foreach (Conversation c in ConversationManager.conversations)
+						{
+							if (c.PeerUser.Uri.CompareTo (peerUser.Uri) == 0)
+							{
+								c.AddMediaChannel (channelPath, mediaChannel);
+								break;
+							}
+						}
+						
 						// FIXME::Pump conversation to create the channel
 						Logger.Debug (
 							"An existing conversation with {0} already exists", 
