@@ -1,3 +1,7 @@
+2007-06-07  Brady Anderson <brady.anderson@gmail.com> 
+
+	added callback for new media channel when only text exists
+
 2007-07-08  Calvin Gaisford <calvinrg@gmail.com> 
 
 	* Banter.mdp, Banter/AudioView.cs, Banter/Makefile.am: Added AudioView
